<resources>
    <string name="app_name">Just Java</string>
    <string name="quantity">QUANTITY</string>
    <string name="order">ORDER</string>
    <string name="order_summary">order summary</string>
    <string name="dollar">$0</string>
    <string name="_0">0</string>
    <string name="increment">+</string>
    <string name="decrement">-</string>
    <string name="toppings">toppings</string>
    <string name="whipped_cream">Whipped cream</string>
    <string name="chocolate">Chocolate</string>
    <string name="name">Name</string>
</resources>